<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentEntrada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntradaFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="44dp">

    <Button
        android:id="@+id/btnSalvarEntrada"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:text="@string/salvar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <EditText
        android:id="@+id/etValorEntrada"
        android:layout_width="283dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novaentrada"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="349dp"
        android:layout_height="69dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424">

        <RadioButton
            android:id="@+id/rbDespesaHistorico"
            android:layout_width="172dp"
            android:layout_height="58dp"
            android:text="@string/despesa"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbReceitaHistorico"
            android:layout_width="175dp"
            android:layout_height="59dp"
            android:text="@string/receita"
            android:textSize="24sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>