<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentNovaMeta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovaMetaFragment" >

    <Button
        android:id="@+id/btnSalvarMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <EditText
        android:id="@+id/etNomeMeta"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/meta"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/etValorMeta"
        android:layout_width="318dp"
        android:layout_height="69dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/tvTituloMeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novameta"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />
</androidx.constraintlayout.widget.ConstraintLayout>